# CastScribe

./: .gitignore  .pypiignore  LICENSE  MANIFEST.in  README.md  media_to_text.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/superpowers/plans/: 2026-07-07-castscribe-project.md  2026-07-07-cloud-transcription-backends.md  2026-07-07-media-to-text.md
docs/superpowers/specs/: 2026-07-07-cloud-transcription-backends-design.md  2026-07-07-media-to-text-design.md
src/castscribe/: __init__.py  __main__.py  cli.py  downloader.py  pipeline.py  sources.py  subtitles.py  transcriber.py
src/castscribe/transcription/: __init__.py  aliyun.py  aws.py  azure.py  formatting.py  google.py  local.py  options.py  tencent.py
tests/: test_cli_entrypoint.py  test_cloud_backends.py  test_media_to_text.py  test_packaging_metadata.py  test_privacy_ignore.py  test_transcription_core.py
