[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "castscribe"
version = "0.1.0"
description = "Download subtitles or media from video and podcast URLs, then transcribe them to text."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "yt-dlp>=2026.6.9",
]
authors = [
    { name = "longbai" },
]
keywords = ["transcription", "yt-dlp", "podcast", "youtube", "bilibili", "whisper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing",
]

[project.optional-dependencies]
whisper = ["faster-whisper"]
azure = ["azure-cognitiveservices-speech"]
aws = ["boto3"]
google = ["google-cloud-speech"]
cloud = [
    "azure-cognitiveservices-speech",
    "boto3",
    "google-cloud-speech",
]
build = [
    "build",
    "twine",
]
dev = [
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/longbai/CastScribe"
Repository = "https://github.com/longbai/CastScribe"
Issues = "https://github.com/longbai/CastScribe/issues"

[project.scripts]
castscribe = "castscribe.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
